src/Style/Home.scss
@use "../Variables.scss" as *;

body {
    background: url(../assets/images/Teste.png) no-repeat;
    background-size: 100% auto;
    background-repeat: repeat-y;
    background-position: top center;
    background-color: $main-Background;
}


.Home_Container {
    display: flex;
    flex-direction: column;
    height: auto;
    max-width: 100%;

    .Home_Content {
        padding: 7vh 3.2vw;


        // Contato


        .Contacts_Container {
            background-color: $White;
            display: flex;
            flex-direction: column;
            gap: 2vh;
            margin: 5vh 0;
            padding: 28px 31px;    
            border: solid $Black 1px;
            border-radius: 30px;
            
            @media (max-width:850px) {
                max-width: 75%;
            }
            @media (min-width:850px) {
                max-width: 25%;
            }

            h2 {
                font-size: clamp(1.5rem, 2vw, 1.8rem);
                line-height: 1.5;
                margin: 0 0 2vh 0;
            }
            
            a {
                text-decoration: none;
                width: fit-content;
                font-size: clamp(0.5rem, 2vw, 1rem);
            }
            
            .Email_Container, .Youtube_Container {
                display: flex;
                align-items: center;
                height: auto;
                gap: 0.7vw;
                
                img {
                    width: 30px;
                    height: auto;
                }
            }
        }

        
        //Membros do M3
        
        
        .Loading_Text {
            font-size: clamp(1.3rem, 2vw, 1.5rem);
            line-height: 1.5;
            text-align: center;
            font-weight: 400;
        }
        
        .Members_Title{
            font-size: clamp(1.8rem, 3vw, 2.8rem);
            line-height: 1.5;
            text-align: center;
        }
        
        .Members_Container {
            display: grid;
            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
            grid-auto-rows: minmax(250px, auto);
            gap: 2vw;
            justify-items: center;
            align-items: center;
            margin: 1vh 2vw;
        }
        
        
        // Projetos com destaque
        
        
        
        .Project_Title {
            font-size: clamp(1.5rem, 2vw, 2rem);
            line-height: 1.5;
        }
        
        .HomeProjects_Container {
            display: grid;
            grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
            grid-auto-rows: minmax(250px, auto);
            justify-items: center;
            justify-content: space-between;
            gap: 3%;
            padding: 0 1vw;
        }
        
        .GotoProjects_anchor {
            font-size: clamp(1.5rem, 2vw, 2rem);
            margin-bottom: 0;
        }
    }
}

